<resources>
    <string name="app_name">My Tied</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">796858453781859</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api_key">AIzaSyDVusiCotzBPLpJMQ9FFWl7JvlWO4_A49s</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmVtaW5lZmEiLCJhIjoiY2lzeGFqYTN2MDhsbDJ5cGdvbnBndm8yYiJ9.F8ogZn8CTWTl-p5btlTBoQ</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Logout">Logout</string>
    <string name="str_splash">Your tool to be an exceptional rep for your clients and business</string>
    <string name="connection_error">Error connecting to server.</string>
    <string name="str_register">Register</string>
    <string name="str_signin">Sign In</string>
    <string name="str_login">Login</string>
    <string name="str_done">Done!</string>
    <string name="str_back">Back</string>
    <string name="str_hint_email">Email Address</string>
    <string name="str_hint_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_reset_success">We just sent you an email with instructions to reset your password</string>
    <string name="website">http://www.gettied.com</string>
    <string-array name="str_walkthrough">
        <item>Manage your tasks quickly and efficiently</item>
        <item>Keep your clients close to you and the activities</item>
        <item>See analytics about your sales from clients and lines</item>
        <item>Your clients sometimes are located close enough</item>
    </string-array>
    <string-array name="help_description">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</item>
        <item>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</item>
        <item>How much does it cost?","Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</item>
        <item>How much does it cost?","Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</item>
        <item>How much does it cost?","Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</item>
    </string-array>
    <string name="str_signup">Sign Up</string>
    <string name="str_signup_hint1">What is your email address?</string>
    <string name="str_signup_hint2">Provide your password?</string>
    <string name="str_signup_hint_email">EMAIL</string>
    <string name="str_signup_hint_password">PASSWORD</string>
    <string name="str_continue">CONTINUE SETUP</string>
    <string name="str_add_picture">+ADD PICTURE</string>
    <string name="str_signup_hint3">Please tell me more about yourself so I can better server you</string>
    <string name="str_profile">SKIP SETUP</string>
    <string name="str_first_name">FIRST NAME</string>
    <string name="str_last_name">LAST NAME</string>
    <string name="str_signup_hint4">Enter your name?</string>
    <string name="str_signup_hint5">Let me save both your phone number and fax number</string>
    <string name="str_phone">PHONE</string>
    <string name="str_fax">FAX</string>
    <string name="str_address">ADDRESS</string>
    <string name="str_city">CITY</string>
    <string name="str_state">STATE</string>
    <string name="str_zip_code">ZIP CODE</string>
    <string name="str_signup_hint6">Provide your office address</string>
    <string name="str_signup_hint7">Office address same as hc</string>
    <string name="str_signup_hint8">Please enter your home address</string>
    <string name="str_signup_hint9">What territories do you cover?</string>
    <string name="str_signup_hint10">What type of sales rep are you?</string>
    <string name="str_self">Self</string>
    <string name="str_group">Group</string>
    <string name="str_principal">I am the Principal</string>
    <string name="str_subrep">I am a sub rep</string>
    <string name="str_signup_hint11">How would you describe yourself for this group?</string>
    <string name="str_signup_hint12">What is your industry?</string>
    <string-array name="str_industry">
        <item>News</item>
        <item>Business</item>
        <item>Furnitures</item>
        <item>Technology</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Test1</item>
        <item>Tes21</item>
    </string-array>
    <string name="str_signup_hint13">ADD BOSS INFO</string>
    <string name="str_signup_co_worker">Enter your co-worker info</string>
    <string name="str_fullname">FULL NAME</string>
    <string name="str_invite_via">INVITE VIA</string>
    <string name="str_sms">SMS</string>
    <string name="str_email">Email</string>
    <string name="str_no_invite">No Invite</string>
    <string name="str_territory">TERRITORY</string>
    <string name="str_signup_hint14">Would you like to add your boss info now or later?</string>
    <string name="str_signup_hint15">We advise you add now to better server you</string>
    <string name="str_add_later">ADD LATER</string>
    <string name="str_signup_hint16">How many co-workers do you have?</string>
    <string name="str_worker_count1">1 - 5</string>
    <string name="str_worker_count2">6 - 10</string>
    <string name="str_worker_count3">11 - 20</string>
    <string name="str_worker_count4">50+</string>
    <string name="str_signup_hint17">Add/Invite your employees</string>
    <string name="str_signup_hint18">*You can import multiple employees via EXCEL using the website. Learn More></string>
    <string name="str_invite_email">invite via email address</string>
    <string name="str_invite_sms">invite via SMS</string>
    <string name="str_add_app">Add via app</string>
    <string name="str_signup_hint19">Enter Code</string>
    <string name="str_signup_hint20">We sent code to your phone number, please enter code below</string>
    <string name="str_help">HELP</string>
    <string name="str_next">NEXT</string>
    <string name="str_delete">DELETE</string>
    <string name="str_signup_invite">Add/Invite your employees</string>
    <string name="str_invite_options">
        *You can import multiple employees via EXCEL using the website. <u>LEARN MORE ></u>.
    </string>
    <string-array name="str_help_title">
        <item>How does Tied work?</item>
        <item>how can I add multiple clients?</item>
        <item>Who can use Tied?</item>
        <item>is Tied that helpful?</item>
    </string-array>
    <string-array name="str_help_content">
        <item>Last night, Darth Vader came down from planet Vulcan. And he otld me that if didn#t take Lerraine, That he had melt my brain.</item>
        <item>Oh, please to meet you, Calvin Marty Klein. Do you mind if I sit here? Look, there is a ceremonial reitual coming up.</item>
        <item>Last night, Darth Vader came down from planet Vulcan. And he otld me that if didn#t take Lerraine, That he had melt my brain.</item>
        <item>Oh, please to meet you, Calvin Marty Klein. Do you mind if I sit here? Look, there is a ceremonial reitual coming up.</item>
    </string-array>
    <string name="schedule_add_an_activity">Add an Activity</string>
    <string name="schedule_hint_string">You have not created any schedule yet. Let#s do this%</string>
    <string name="schedule_employee_hint_string">You have\'nt added an employee yet, Adding them is easy. Add to follow their activities</string>
    <string name="schedule_create_schedule_btn">+ CREATE SCHEDULE</string>
    <string name="schedule_hint_string1">Oops! We can%t find any client in your list</string>
    <string name="schedule_hint_string2">Create New Client to Schedule that you would like to schedule an appointment with</string>
    <string name="schedule_hint_string3">You have more lots of clients? Import via CSV, Excel using our website. It#s easy GO</string>
    <string name="schedule_add_client_btn">+ ADD CLIENT</string>
    <string name="schedule_create_new_schedule_btn">+ CREATE NEW SCHEDULE</string>
    <string name="schedule_add_employee_btn">+ ADD EMPLOYEE</string>
    <string name="schedule_string_appointment">Lorem ipsum dolor sit amet, hello you there i mean you consectetur adipiscing elit. Etiam molestie tortor sed tellus posuere auctor. Nullam ultricies semper purus, et rhoncus leo efficitur consectetur</string>
    <string name="alert_valide_email">*Please enter a valid email address</string>
    <string name="alert_valide_password">Please enter password</string>
    <string name="alert_valide_address">*Please enter address</string>
    <string name="alert_valide_city">*Please enter city</string>
    <string name="alert_valide_state">*Please enter state</string>
    <string name="alert_valide_zipcode">*Please enter zip code</string>
    <string name="alert_valide_territory">*Please enter territory</string>
    <string name="alert_valide_industry">*Please select industry</string>
    <string name="alert_valide_phone_number">*Please enter phone number</string>
    <string name="alert_valide_verify_code">*Please enter verify code</string>
    <string name="alert_valide_first_name">Please provide your first name</string>
    <string name="alert_valide_last_name">Please provide your last name</string>
    <string name="alert_valide_name_empty">first name cannot be empty</string>
    <string name="alert_valide_no_territory">No territory inputted</string>
    <string name="str_name">Full Name</string>
    <string name="num_signup_stages">6</string>
    <string name="profile_notification">Notifications</string>
    <string name="profile_address">Address</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_send_invite">SendInviteActivity</string>
    <string name="google_maps_api_key">AIzaSyC0m7wUq4hxxLG3D4YA63U6Qa4AhAFb-4M</string>
    <string name="track_progress">Track your progress with a line, this is a great way to measure how you are doing over time. You can start now</string>
    <string name="lorem">Lorem ipsum lorem ipsum lorep inmun ghryfu yu vaety barety asahsh asas kksas ksas</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="industries">Industries</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password, again</string>
    <string name="save_changes">Save Changes</string>
    <string name="type_name_to_add_industry">TYPE NAME TO ADD NEW INDUSTRY</string>
    <string name="done">Done</string>
    <string name="office">OFFICE</string>
    <string name="street_address">Street Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="home">HOME</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="change">CHANGE</string>
    <string name="address">Address</string>
    <string name="sales">Sales</string>
    <string name="why_go_premium">Why Go Premium?</string>
    <string name="go_premium">GO PREMIUM</string>
    <string name="managing_subscription_text">Managing and keeping track of your progress with your clients is about to get better</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="option_3">Option #3</string>
    <string name="cancel">Cancel</string>
</resources>