<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCancel"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/select_photo"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_gray"></View>

        <Button
            android:id="@+id/btnTakeNewPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/take_new_photo"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_gray"></View>

        <Button
            android:id="@+id/btnOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_white_rounded"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/red_color" />
</RelativeLayout>