<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/button_bg">

            <TextView
                android:id="@+id/txt_signup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="PROFILE"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/back_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/btn_back_arrow" />

                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_close"
                    android:text="@string/str_back"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/icon_edit" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/button_bg">

            <android.support.v4.view.ViewPager
                android:id="@+id/vpProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v4.view.ViewPager>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circleIndicator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom" />
        </FrameLayout>

        <Button
            android:id="@+id/btnEditPersonalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/edit_personal_info"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <Button
            android:id="@+id/btnNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/notifications"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <RelativeLayout
            android:id="@+id/rlIndustries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <Button
                android:id="@+id/btnIndustries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tvIndustries"
                android:layout_centerVertical="true"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:text="@string/industries"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/tvIndustries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/grey"
                android:layout_toLeftOf="@+id/ivArrow"
                android:text="4" />

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_gray" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <Button
            android:id="@+id/btnPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/privacy"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_gray"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ababab"></View>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>