<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textColor="@color/accentColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/schedule_title_bg_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/vSeparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llCurrentPassword"
        android:background="@color/light_gray2"></View>

    <LinearLayout
        android:id="@+id/llNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vSeparator1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/accentColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/schedule_title_bg_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/vSeparator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llNewPassword"
        android:background="@color/light_gray2"></View>

    <LinearLayout
        android:id="@+id/llReNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vSeparator2"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/new_password_again"
            android:textColor="@color/accentColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etReNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/schedule_title_bg_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/vSeparator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llReNewPassword"
        android:background="@color/light_gray2"></View>

    <Button
        android:id="@+id/btnSaveChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:text="@string/save_changes"
        android:textColor="@color/white" />
</RelativeLayout>